[gd_scene load_steps=4 format=3 uid="uid://upgrade_choice_card_001"]

[ext_resource type="Script" path="res://src/ui/upgrade_choice_card.gd" id="1_card"]
[ext_resource type="Shader" path="res://src/ui/shaders/ui_shimmer.gdshader" id="2_shimmer"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_accent_shimmer"]
shader = ExtResource("2_shimmer")
shader_parameter/intensity = 0.8
shader_parameter/width = 0.3
shader_parameter/speed = 1.2

[node name="UpgradeChoiceCard" type="Button"]
custom_minimum_size = Vector2(260, 160)
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
script = ExtResource("1_card")
text = ""

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="HBox" type="HBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Accent" type="ColorRect" parent="Margin/HBox"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2
material = SubResource("ShaderMaterial_accent_shimmer")
color = Color(0.2, 0.9, 1, 1)

[node name="Content" type="VBoxContainer" parent="Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="TopRow" type="HBoxContainer" parent="Margin/HBox/Content"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Margin/HBox/Content/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Upgrade"
autowrap_mode = 3

[node name="RarityBadge" type="Label" parent="Margin/HBox/Content/TopRow"]
layout_mode = 2
text = "COMMON"
horizontal_alignment = 2

[node name="Badges" type="HBoxContainer" parent="Margin/HBox/Content"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TypeBadge" type="Label" parent="Margin/HBox/Content/Badges"]
layout_mode = 2
text = "PASSIVE"

[node name="Effect" type="Label" parent="Margin/HBox/Content"]
layout_mode = 2
text = "+20%"
autowrap_mode = 3

[node name="Description" type="Label" parent="Margin/HBox/Content"]
layout_mode = 2
text = "Description"
autowrap_mode = 3
max_lines_visible = 2
